# sigmalang

./: CMakeLists.txt  README.md  build.sh  config.sh  run.sh
include/sigmalang/: ast.hpp  diagnostics.hpp  lexer.hpp  parser.hpp  sigmalang.hpp  token.hpp  util.hpp
src/: ast.cpp  diagnostics.cpp  lexer.cpp  main.cpp  parser.cpp
